tests/baselines/reference/structBodyWithStatements_basic.errors.txt
tests/cases/conformance/basicStructs/structDeclarations_basic/structBody_basic/structBodyWithStatements_basic.ts(2,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/basicStructs/structDeclarations_basic/structBody_basic/structBodyWithStatements_basic.ts(3,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/basicStructs/structDeclarations_basic/structBody_basic/structBodyWithStatements_basic.ts(6,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/basicStructs/structDeclarations_basic/structBody_basic/structBodyWithStatements_basic.ts(7,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/basicStructs/structDeclarations_basic/structBody_basic/structBodyWithStatements_basic.ts (4 errors) ====
    struct C {
        var x = 1; // error, variable statement
        ~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    struct C2 {
        function foo() {} // error, function declaration
        ~~~~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    var x = 1;
    var y = 2;
    struct C3 {
        x: number = y + 1; // ok, need a var in the statement production
    }